[레거시 코드 리팩터링 - 2단계] 다즐(최우창) 미션 제출합니다. (#568)
* test: 빈 테이블 수정 테스트

* feat: 상품명 vo 구현

* feat: 가격 vo 구현

* refactor: 상품 서비스 리팩터링

* feat: 메뉴그룹명 vo 생성

* refactor: 메뉴그룹명 서비스 리팩터링

* feat: 메뉴명 vo 생성

* feat: 수량 vo 생성

* feat: 메뉴 상품 목록 vo 생성

* refactor: 메뉴 서비스 리팩터링

* refactor: 사용하지 않는 dao 삭제

* feat: 테이블 인원 수 vo 생성

* feat: 도메인 리포지토리 구현

* feat: 테이블 서비스 리팩터링

* feat: 테이블 그룹 서비스 리팩터링

* refactor: 주문 서비스 리팩터링

* chore: 코드 컨벤션 정리

* refactor: 메뉴 상품 저장 로직 수정

* refactor: 주문 메뉴 저장 로직 수정

* refactor: DTO 용도에 맞게 분리

* refactor: 명세 수정에 따른 http 파일 수정

* refactor: 수정 로직에서 예외 처리하도록 수정

* refactor: 매직 넘버 상수화