@@ -2,7 +2,6 @@ package kitchenpos.application;
 
 import static kitchenpos.test.fixture.OrderFixture.주문;
 import static kitchenpos.test.fixture.TableFixture.테이블;
-import static kitchenpos.test.fixture.TableGroupFixture.테이블_그룹;
 import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.SoftAssertions.assertSoftly;
@@ -10,17 +9,19 @@ import static org.assertj.core.api.SoftAssertions.assertSoftly;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.domain.OrderStatus;
+import kitchenpos.domain.OrderRepository;
 import kitchenpos.domain.OrderTable;
-import kitchenpos.domain.TableGroup;
+import kitchenpos.domain.OrderTableRepository;
+import kitchenpos.domain.vo.OrderStatus;
+import kitchenpos.dto.request.TableGroupCreateRequest;
+import kitchenpos.dto.response.TableGroupResponse;
 import kitchenpos.test.ServiceTest;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.util.ReflectionTestUtils;
 
 @SuppressWarnings("NonAsciiCharacters")
 class TableGroupServiceTest extends ServiceTest {
@@ -29,10 +30,10 @@ class TableGroupServiceTest extends ServiceTest {
     private TableGroupService tableGroupService;
 
     @Autowired
-    private OrderDao orderDao;
+    private OrderRepository orderRepository;
 
     @Autowired
-    private OrderTableDao orderTableDao;
+    private OrderTableRepository orderTableRepository;
 
     @Nested
     class 테이블_그룹_추가_시 {
@@ -40,84 +41,82 @@ class TableGroupServiceTest extends ServiceTest {
         @Test
         void 정상적인_테이블_그룹이라면_테이블_그룹을_추가한다() {
             //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = orderTableDao.save(테이블(null, 0, true));
-            TableGroup tableGroup = 테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB));
+            OrderTable orderTableA = orderTableRepository.save(테이블(0, true));
+            OrderTable orderTableB = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
 
             //when
             LocalDateTime now = LocalDateTime.now();
-            TableGroup savedTableGroup = tableGroupService.create(tableGroup);
+            TableGroupResponse tableGroupResponse = tableGroupService.create(request);
 
             //then
             assertSoftly(softly -> {
-                softly.assertThat(savedTableGroup.getId()).isNotNull();
-                softly.assertThat(savedTableGroup.getCreatedDate()).isAfter(now);
-                softly.assertThat(savedTableGroup.getOrderTables()).usingRecursiveComparison()
-                        .ignoringFields("tableGroupId", "empty")
-                        .isEqualTo(List.of(orderTableA, orderTableB));
-                softly.assertThat(savedTableGroup.getOrderTables()).extracting(OrderTable::getTableGroupId)
-                        .containsOnly(savedTableGroup.getId());
-                softly.assertThat(savedTableGroup.getOrderTables()).extracting(OrderTable::isEmpty).containsOnly(false);
+                softly.assertThat(tableGroupResponse.getId()).isNotNull();
+                softly.assertThat(tableGroupResponse.getCreatedDate()).isAfter(now);
             });
         }
 
         @Test
         void 테이블_목록이_비어있으면_예외를_던진다() {
             //given
-            TableGroup tableGroup = 테이블_그룹(LocalDateTime.now(), Collections.emptyList());
+            TableGroupCreateRequest request = new TableGroupCreateRequest(Collections.emptyList());
 
             //when, then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 테이블_개수가_2보다_작으면_예외를_던진다() {
             //given
-            OrderTable orderTable = orderTableDao.save(테이블(null, 0, true));
-            TableGroup tableGroup = 테이블_그룹(LocalDateTime.now(), List.of(orderTable));
+            OrderTable orderTable = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(orderTable.getId()));
 
             //when, then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 존재하지_않는_테이블이_있으면_예외를_던진다() {
             //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = 테이블(null, 0, true);
-            TableGroup tableGroup = 테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB));
+            OrderTable orderTableA = orderTableRepository.save(테이블(0, true));
+            OrderTable orderTableB = 테이블(0, true);
+            ReflectionTestUtils.setField(orderTableB, "id", -1L);
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
 
             //when, then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 테이블이_비어있지_않으면_예외를_던진다() {
-            //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = orderTableDao.save(테이블(null, 0, false));
-            TableGroup tableGroup = 테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB));
+            //given®
+            OrderTable orderTableA = orderTableRepository.save(테이블(1, false));
+            OrderTable orderTableB = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
 
             //when, then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 이미_그룹화된_테이블이_있으면_예외를_던진다() {
             //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableC = orderTableDao.save(테이블(null, 0, true));
-            tableGroupService.create(테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB)));
+            OrderTable orderTableA = orderTableRepository.save(테이블(0, true));
+            OrderTable orderTableB = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
+            tableGroupService.create(request);
 
             //when, then
-            assertThatThrownBy(() ->
-                    tableGroupService.create(테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableC)))
-            ).isInstanceOf(IllegalArgumentException.class);
+            assertThatThrownBy(() -> tableGroupService.create(request))
+                    .isInstanceOf(IllegalArgumentException.class);
         }
     }
 
@@ -127,18 +126,19 @@ class TableGroupServiceTest extends ServiceTest {
         @Test
         void 정상적인_테이블_그룹이라면_테이블_그룹을_해제한다() {
             //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = orderTableDao.save(테이블(null, 0, true));
-            TableGroup tableGroup =
-                    tableGroupService.create(테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB)));
+            OrderTable orderTableA = orderTableRepository.save(테이블(0, true));
+            OrderTable orderTableB = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
+            TableGroupResponse response = tableGroupService.create(request);
 
             //when
-            tableGroupService.ungroup(tableGroup.getId());
+            tableGroupService.ungroup(response.getId());
 
             //then
             assertSoftly(softly -> {
-                softly.assertThat(orderTableDao.findById(orderTableA.getId()).get().getTableGroupId()).isNull();
-                softly.assertThat(orderTableDao.findById(orderTableB.getId()).get().getTableGroupId()).isNull();
+                softly.assertThat(orderTableRepository.findById(orderTableA.getId()).get().getTableGroup()).isNull();
+                softly.assertThat(orderTableRepository.findById(orderTableB.getId()).get().getTableGroup()).isNull();
             });
         }
 
@@ -146,35 +146,31 @@ class TableGroupServiceTest extends ServiceTest {
         @EnumSource(value = OrderStatus.class, names = {"COOKING", "MEAL"})
         void 테이블의_주문이_조리중이거나_식사중이라면_예외를_던진다(OrderStatus orderStatus) {
             //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = orderTableDao.save(테이블(null, 0, true));
-            TableGroup tableGroup =
-                    tableGroupService.create(테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB)));
-            orderDao.save(주문(orderTableA.getId(), orderStatus.name(), LocalDateTime.now(), Collections.emptyList()));
+            OrderTable orderTableA = orderTableRepository.save(테이블(0, true));
+            OrderTable orderTableB = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
+            TableGroupResponse response = tableGroupService.create(request);
+            orderRepository.save(주문(orderTableA, orderStatus, LocalDateTime.now()));
 
             //when, then
-            assertThatThrownBy(() -> tableGroupService.ungroup(tableGroup.getId()))
+            assertThatThrownBy(() -> tableGroupService.ungroup(response.getId()))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 테이블의_주문이_종료되었으면_예외를_던지지_않는다() {
             //given
-            OrderTable orderTableA = orderTableDao.save(테이블(null, 0, true));
-            OrderTable orderTableB = orderTableDao.save(테이블(null, 0, true));
-            TableGroup tableGroup =
-                    tableGroupService.create(테이블_그룹(LocalDateTime.now(), List.of(orderTableA, orderTableB)));
-            orderDao.save(
-                    주문(
-                            orderTableA.getId(),
-                            OrderStatus.COMPLETION.name(),
-                            LocalDateTime.now(),
-                            Collections.emptyList()
-                    )
-            );
+            OrderTable orderTableA = orderTableRepository.save(테이블(0, true));
+            OrderTable orderTableB = orderTableRepository.save(테이블(0, true));
+            TableGroupCreateRequest request = new TableGroupCreateRequest(
+                    List.of(orderTableA.getId(), orderTableB.getId()));
+            TableGroupResponse response = tableGroupService.create(request);
+            orderRepository.save(주문(orderTableA, OrderStatus.COMPLETION, LocalDateTime.now()));
 
             //when, then
-            assertThatNoException().isThrownBy(() -> tableGroupService.ungroup(tableGroup.getId()));
+            assertThatNoException()
+                    .isThrownBy(() -> tableGroupService.ungroup(response.getId()));
         }
     }
 }
